Closed Bug 779344 Opened 12 years ago Closed 12 years ago

B2G panning/zooming broken by forgetting about code path

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: drs, Assigned: drs)

References

Details

Attachments

(1 file)

B2G panning/zooming was broken by bug 706179. Changes were made to the way we get transforms from layers, and these changes were applied to the Fennec code path but not to B2G (AsyncPanZoomController::SampleContentTransformForFrame()).
Blocks: 706179
Proposed fix
Assignee: nobody → bugzilla
Attachment #647746 - Flags: review?(dzbarsky)
Comment on attachment 647746 [details] [diff] [review]
Properly transform B2G panning/zooming after layers changes

r=me with a comment change that I will push.
Attachment #647746 - Flags: review?(dzbarsky) → review+
https://hg.mozilla.org/mozilla-central/rev/66957d7f16cd
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: