Bug 779344: Properly transform B2G panning/zooming after layers changes r=dzbarsky